html necessary tag to recreate the middle section

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -15,6 +15,13 @@
 				<div id="map"></div>
 			</div>
 
+			<section class="middle_section">
+				<div class="candidate1"></div>
+				<div class="candidate1_bar"><span class="vote_count1">0 votes</span></div>
+				<div class="candidate2_bar"><span class="vote_count2">0 votes</span></div>
+				<div class="candidate2"></div>
+			</section>
+
 			<section class="vote_container">
 				<p>Cast Your Vote</p>
 				<div>
