styled candidates vote bar

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -40,6 +40,7 @@
 				<div>Please read the <a href="http://simplemaps.com/docs">documentation</a> to learn how to customize this map.</div>
 				</div>
 			</footer>
+		</div>
 	</body>
 </html>
       
