--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=7">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Map Example</title>
     <script src="mapdata.js" defer></script>
