linked voting app landing page to voting site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="navbar-text">
         <a href="#card_container"><span class="middle-nav">Know your candidates</span></a>
-        <button class="app-button">VISIT VOTING APP</button>
+        <a href="./Voting App/test.html" target="_blank"><button class="app-button">VISIT VOTING APP</button></a>
       </div>
     </header>
 
