changed document title

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=7">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Map Example</title>
+    <title>Voting Site</title>
     <script src="mapdata.js" defer></script>
     <script src="usmap.js" defer></script>
 		<link rel="stylesheet" href="./styles.css">
+		<link rel="icon" href="../image/Votify logo.png" sizes="32x32">
   </head>
 	<body>
 		<div>
