--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -20,8 +20,8 @@
 
 			<section class="middle_section">
 				<div class="candidate1"></div>
-				<div class="candidate1_bar"><span class="vote_count1">0 votes</span></div>
-				<div class="candidate2_bar"><span class="vote_count2">0 votes</span></div>
+				<div class="candidate1_bar"><span class="vote_count1"><span class="vote_number1">0</span> votes</span></div>
+				<div class="candidate2_bar"><span class="vote_count2"><span class="vote_number2">0</span> votes</ span></div>
 				<div class="candidate2"></div>
 			</section>
 
