added a class to target images in candidate image div

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -31,8 +31,8 @@
 					<span class="select_state">Select State:<span class="state">New York</span></span>
 					<div class="candidate_n_vote">
 						<div class="candidates_img">
-							<div class="candidate1"></div>
-							<div class="candidate2"></div>
+							<div class="candidate1 button_image1"></div>
+							<div class="candidate2 button_image2"></div>
 						</div>
 						<button class="vote_button">Vote</button>
 					</div>
