add select element using javascript

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -28,7 +28,7 @@
 			<section class="vote_container">
 				<p>Cast Your Vote</p>
 				<div>
-					<span class="select_state">Select State:<span class="state">New York</span></span>
+					<span class="select_state">Select State:</span>
 					<div class="candidate_n_vote">
 						<div class="candidates_img">
 							<div class="candidate1 button_image1"></div>
