add audio sound to candidates image

--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -44,6 +44,8 @@
 				</div>
 			</footer>
 		</div>
+
+		<audio data-key="76" id="tinkSound" src="../sound/tink.wav"></audio>
 	</body>
 </html>
       
