--- a/Voting App/test.html
+++ b/Voting App/test.html
@@ -12,7 +12,7 @@
 		<link rel="icon" href="../image/Votify logo.png" sizes="32x32">
   </head>
 	<body>
-		<span class="thumbUp fadeInOut">👍</span>
+		<!-- <span class="thumbUp fadeInOut">👍</span> -->
 		<div>
 			<h1>USA Map</h1>
 			<div style="max-width: 700px"> <!-- Keep map above fold -->
