--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./image/Votify logo.png" sizes="32x32">
+    <link rel="icon" href="./image/Votify logo.png" sizes="32x32" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Votify</title>
   </head>
   <body>
-
     <header class="navbar">
       <div class="navbar-icon">
         <img class="icon" src="image/Votify logo.png" alt="votify logo" />
       </div>
       <div class="navbar-text">
-        <a href="#card_container"><span class="middle-nav">Know your candidates</span></a>
-        <a href="./Voting App/test.html" target="_blank"><button class="app-button">VISIT VOTING APP</button></a>
+        <a href="#card_container"
+          ><span class="middle-nav">Know your candidates</span></a
+        >
+        <a href="./Voting App/test.html" target="_blank"
+          ><button class="app-button">VISIT VOTING APP</button></a
+        >
       </div>
     </header>
 
     <main>
-
       <div class="hero">
         <div class="hero_content">
           <h1>
-            Cast Your Vote,<br/>
+            Cast Your Vote,<br />
             Today!
           </h1>
           <p>
@@ -42,7 +47,7 @@
 
       <h4 class="candidates">Know your candidates</h4>
 
-      <div class="card_container"  id="card_container">
+      <div class="card_container" id="card_container">
         <div class="card">
           <div class="card_img">
             <!-- <img class="img" src="image/edward.png" alt="" /> -->
@@ -75,8 +80,8 @@
     <footer class="footer">
       <div class="footer_nav">
         <span><a href="#">Home</a></span>
-        <span><a href="#">Candidates</a></span>
-        <span><a href="#">Voting App</a></span>
+        <span><a href="#card_container">Candidates</a></span>
+        <span><a href="./Voting App/test.html">Voting App</a></span>
         <span><a href="#">Others</a></span>
       </div>
 
@@ -85,18 +90,21 @@
           <p>&copy; 2022 VOTIFY CORPORATION</p>
         </div>
         <div class="footer_socials">
-          <a href="#"
-            ><img class="social" src="image/GitHub (2).png" alt=""
+          <a href="https://github.com/EmmanuelAjibokun/Votify"
+            ><img class="social" src="image/GitHub (2).png" alt="GitHub icon"
           /></a>
-          <a href="#"><img class="social" src="image/Global.png" alt="" /></a>
-          <a href="#"
-            ><img class="social" src="image/You Tube.png" alt=""
+          <a href="https://www.google.com"
+            ><img class="social" src="image/Global.png" alt="web icon"
           /></a>
-          <a href="#"><img class="social" src="image/Google.png" alt="" /></a>
+          <a href="https://www.youtube.com/watch?v=noq-ZHTD2Cg"
+            ><img class="social" src="image/You Tube.png" alt="youTube icon"
+          /></a>
+          <a href="https://www.google.com"
+            ><img class="social" src="image/Google.png" alt="google icon"
+          /></a>
         </div>
       </div>
     </footer>
-
 
     <script src="script.js"></script>
   </body>
